# awesome-project

./: .gitignore  LICENSE  README.md
mini-render/: raytracer.cpp  render.cpp
tinyrender/: CMakeLists.txt
tinyrender/include/: geometry.h  model.h  tgaimage.h  utils.h
tinyrender/src/: hello_tga.cpp  main.cpp  model.cpp  tgaimage.cpp  utils.cpp
tinyrender/tests/: hello_google_test.cpp
